eks/network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-1
  namespace: namespace-b

spec:
  # apply this policy is applied for each pod that has app: webapp on namespace-b
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: namespace-a # only the pods on namespace-a will be able access pods running webapp on namespace-b
